# OneKey

./: Cargo.toml  README.md
src/: app.rs  events.rs  main.rs  menu.rs  theme.rs  types.rs  ui.rs  utils.rs
src/handlers/: command.rs  cpu_test.rs  disk_test.rs  k3s.rs  k8s.rs  mod.rs  network_test.rs  port_manager.rs  sing_box.rs  system_info.rs  tcp_optimizer.rs  xray.rs
src/ui/: components.rs  cpu_test.rs  disk_test.rs  helpers.rs  mod.rs  network_test.rs  system_info.rs
