[package]
name = "onekey"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
chrono = { version = "0.4.41", features = ["serde"] }
sysinfo = "0.31"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num_cpus = "1.0"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
url = "2.5"

[dev-dependencies]
tempfile = "3"  # 测试时使用临时文件

[profile.release]
opt-level = "z"  # 优化大小
lto = true       # 链接时优化
codegen-units = 1
strip = true     # 移除符号信息
